--- a/_frontend/blocks/back-img/style.scss
+++ b/_frontend/blocks/back-img/style.scss
@@ -23,11 +23,11 @@
         }
     }
     &__maslo {
-        left: -125px;
+        left: -50px;
         bottom: -45px;
-        width: 424px;
-        height: 358px;
-        background: url("../images/slack/maslo.png") no-repeat;
+        width: 366px;
+        height: 400px;
+        background: url("../images/background/butter-contact.png") no-repeat;
         @include media(xl) {
             display: none;
         }
