--- a/_frontend/blocks/product-use-carousel/style.scss
+++ b/_frontend/blocks/product-use-carousel/style.scss
@@ -248,7 +248,7 @@
     }
     &_one-brand {
         .slick-list {
-            box-shadow: 0px 10px 20px 0px #777;
+            box-shadow: 0px 10px 20px 0px rgba(93, 93, 93, 0.6);
 
         }
     }
