--- a/css/style.css
+++ b/css/style.css
@@ -3714,7 +3714,7 @@ input[type="text"]:focus {
       .product-use-carousel_4_gallery .slick-list {
         background-color: transparent; }
   .product-use-carousel_one-brand .slick-list {
-    box-shadow: 0px 10px 20px 0px #777; }
+    box-shadow: 0px 10px 20px 0px rgba(93, 93, 93, 0.6); }
 
 .random__arrows:hover {
   fill: red; }
