--- a/_frontend/blocks/product-spinner/style.sass
+++ b/_frontend/blocks/product-spinner/style.sass
@@ -124,6 +124,13 @@ $width: 480px
 
 				opacity: 1
 
+			&:hover
+				cursor: pointer
+
+				& h4
+					color: #ce0018
+
+
 
 [data-spinner="content"]
 	display: none
