--- a/css/style.css
+++ b/css/style.css
@@ -1060,6 +1060,93 @@ div.cs-select:focus {
 .cs-select li.cs-optgroup > span {
   cursor: default; }
 
+/*
+ * CSS Styles that are needed by jScrollPane for it to operate correctly.
+ *
+ * Include this stylesheet in your site or copy and paste the styles below into your stylesheet - jScrollPane
+ * may not operate correctly without them.
+ */
+.jspContainer {
+  overflow: hidden;
+  position: relative; }
+
+.jspPane {
+  position: absolute; }
+
+.jspVerticalBar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 5px;
+  height: 100%;
+  background: red;
+  margin-left: 10px; }
+
+.jspHorizontalBar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 16px;
+  background: red; }
+
+.jspCap {
+  display: none; }
+
+.jspHorizontalBar .jspCap {
+  float: left; }
+
+.jspTrack {
+  background: #ffc92a;
+  position: relative; }
+
+.jspDrag {
+  background: #ffc928;
+  position: relative;
+  top: 0;
+  cursor: pointer;
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
+  left: -5px; }
+
+.jspHorizontalBar .jspTrack,
+.jspHorizontalBar .jspDrag {
+  float: left;
+  height: 100%; }
+
+.jspArrow {
+  background: #50506d;
+  text-indent: -20000px;
+  display: block;
+  cursor: pointer;
+  padding: 0;
+  margin: 0; }
+
+.jspArrow.jspDisabled {
+  cursor: default;
+  background: #80808d; }
+
+.jspVerticalBar .jspArrow {
+  height: 16px; }
+
+.jspHorizontalBar .jspArrow {
+  width: 16px;
+  float: left;
+  height: 100%; }
+
+.jspVerticalBar .jspArrow:focus {
+  outline: none; }
+
+.jspCorner {
+  background: #eeeef4;
+  float: left;
+  height: 100%; }
+
+/* Yuk! CSS Hack for IE6 3 pixel bug :( */
+* html .jspCorner {
+  margin: 0 -3px 0 0; }
+
 @font-face {
   font-family: MyriadPro;
   src: url(../fonts/MyriadProRegular/MyriadProRegular.eot);
@@ -1772,8 +1859,13 @@ input[type="text"]:focus {
     font-size: 45px;
     line-height: 48px;
     letter-spacing: .45px;
-    margin-bottom: 23px; }
+    margin-bottom: 23px;
+    min-height: 96px; }
   .cheese__text {
+    overflow: auto;
+    position: relative;
+    left: -40px;
+    height: 230px;
     clear: both;
     color: #000;
     font-family: 'MyriadPro', sans-serif;
@@ -1781,21 +1873,16 @@ input[type="text"]:focus {
     line-height: 28px;
     text-align: justify;
     letter-spacing: .2px;
-    padding-bottom: 13px; }
+    padding-bottom: 13px;
+    margin-bottom: 20px; }
+    .cheese__text p {
+      padding-left: 40px;
+      padding-right: 20px; }
+    @media (max-width: 640px) {
+      .cheese__text {
+        left: 0; } }
   .cheese__text-block {
     position: relative; }
-
-.cheese__text-block:after, .cheese__text-block:before {
-  content: '';
-  position: absolute;
-  background: #ffc928; }
-
-.cheese__text-block:before {
-  width: 15px;
-  height: 15px;
-  border-radius: 100%;
-  left: -39px;
-  top: 0; }
 
 .cheese__text-block:after {
   width: 4px;
@@ -2340,6 +2427,10 @@ input[type="text"]:focus {
         text-align: center;
         transition-duration: 0.2s;
         opacity: 1; }
+      #spinner .rotate-wrap .circle:hover {
+        cursor: pointer; }
+        #spinner .rotate-wrap .circle:hover h4 {
+          color: #ce0018; }
 
 [data-spinner="content"] {
   display: none; }
